Update controller. Barrier test passes. Next is restart test
